fixed overflow mobile ver

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .mainContainer {
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
   background-color: #b4b4b4;
